<resources>
    <string name="app_name" translatable="false">Smart Receipts</string>
    <string name="sr_app_name" translatable="false">Smart Receipts</string>
    <string name="package_name" translatable="false">wb.receipts</string>
    <string name="menu_main_settings">Settings</string>
    <string name="menu_main_categories">Categories</string>
    <string name="menu_main_csv">Customize CSV Output</string>
    <string name="menu_main_pdf">Customize PDF Output</string>
    <string name="menu_main_my_account">My Account</string>
    <string name="menu_main_export">Backup</string>
    <string name="menu_main_about">About</string>
    <string name="add">Add</string>
    <string name="add_item">Add %s</string>
    <string name="category">Category</string>
    <string name="column">Column</string>
    <string name="column_item">Column %s</string>
    <string name="copy">Copy</string>
    <string name="daily_total">Daily Total: %s</string>
    <string name="day">%s Day</string>
    <string name="days">%s Days</string>
    <string name="default_currency">Default Currency: </string>
    <string name="delete">Delete</string>
    <string name="delete_item">Delete %s?</string>
    <string name="delete_sync_information">Any remotely synchronized data for this item will also be deleted.</string>
    <string name="distance">Distance</string>
    <string name="distance_item">Distance %s</string>
    <string name="distance_total_item">Dist. Total: %s</string>
    <string name="edit">Edit</string>
    <string name="export">Export</string>
    <string name="feedback">%s - Feedback</string>
    <string name="image">Image</string>
    <string name="import_string">Import</string>
    <string name="import_string_item">Import %s</string>
    <string name="item_code">Code:</string>
    <string name="item_name">Name:</string>
    <string name="move">Move</string>
    <string name="move_copy_item">Move/Copy %s?</string>
    <string name="next_id">Next ID: %d</string>
    <string name="no">No</string>
    <string name="pdf">PDF</string>
    <string name="report">Report</string>
    <string name="report_attached">1 report attached</string>
    <string name="reports_attached">%s reports attached</string>
    <string name="receipt">Receipt</string>
    <string name="save">Save</string>
    <string name="signature">Signature</string>
    <string name="send_file">Get File&#8230;</string>
    <string name="send_email">Send File&#8230;</string>
    <string name="submit">Submit</string>
    <string name="support">%s - Support</string>
    <string name="total">Total</string>
    <string name="total_item">Total: %s</string>
    <string name="text">Text</string>
    <string name="type">Type</string>
    <string name="undefined">Undefined</string>
    <string name="update">Update</string>
    <string name="yes">Yes</string>
    <string name="yes_as_pdf">Yes - As PDF</string>
    <string name="pro_subscription">Smart Receipts Plus</string>
    <string name="plus_subscription_info_dialog_title">@string/pro_subscription</string>
    <string name="plus_subscription_info_dialog_message">Help support us! Upgrade to:\n\n
                                                         &#160;&#8226; Remove Ads\n
                                                         &#160;&#8226; Process Exchange Rates Automatically\n
                                                         &#160;&#8226; Customize PDF Footer Text\n
    </string>
    <string name="plus_subscription_info_dialog_positive_button">Start my Free Trial</string>
    <string name="plus_subscription_info_dialog_negative_button">No Thanks</string>
    <string name="missing_ad_suggest_removal_upsell">Tired of ads? Tap to start an ad-free trial</string>
    <string name="report_info_receipts">Receipts</string>
    <string name="report_info_distance">Distance</string>
    <string name="report_info_reports">Reports</string>
    <string name="report_header_from">From: %s</string>
    <string name="report_header_to">To: %s</string>
    <string name="report_header_receipts_total">Receipts Total: %s</string>
    <string name="report_header_receipts_total_tax">Tax Total: %s</string>
    <string name="report_header_receipts_total_no_tax">Receipts Total (Sans Tax): %s</string>
    <string name="report_header_receipts_total_reimbursable">Receipts Total (Reimbursable): %s</string>
    <string name="report_header_distance_total">Distance Total: %s</string>
    <string name="report_header_gross_total">Gross Total: %s</string>
    <string name="report_header_cost_center">Cost Center: %s</string>
    <string name="report_header_comment">Report Comment: %s</string>
    <string name="report_pdf_generation_error">There was an error generating the report</string>
    <string name="report_pdf_error_too_many_columns_title">Too many columns</string>
    <string name="report_pdf_error_too_many_columns_message">There is not enough space to fit all the columns in the report. Please try limiting the number of columns in Settings.</string>
    <string name="report_pdf_error_too_many_columns_message_landscape">There is not enough space to fit all the columns in the report. Please try limiting the number of columns in Settings or use landscape mode.</string>
    <string name="report_pdf_error_go_to_settings">Go to settings</string>
    <string name="ocr_informational_tooltip_text">Interested in Automatic Scans? Tap here.</string>
    <string name="ocr_questionnaire">OCR</string>
    <string name="ocr_questionnaire_info_title">Automatic Scans (ie OCR):</string>
    <string name="ocr_questionnaire_info_message">We\'re creating tools to scan your receipts (ie OCR) to allow you to take a photo of your receipt and automatically populate some receipt metadata fields (eg price). If you\'re interested in this, we\'d greatly appreciate if you could answer two questions below to help us get this right!</string>
    <string name="ocr_questionnaire_title">Questionnaire:</string>
    <string name="ocr_questionnaire_q1_message">Scans cannot be accurately run on your phone/tablet, so we\'ll have to support remote servers for the OCR process. To allow for this, would you prefer to pay:</string>
    <string name="ocr_questionnaire_q1_option1">Per Receipt: 0.20 USD</string>
    <string name="ocr_questionnaire_q1_option2">Per Receipt: 0.15 USD</string>
    <string name="ocr_questionnaire_q1_option3">This is too much</string>
    <string name="ocr_questionnaire_q1_option4">I\'m not interested</string>
    <string name="ocr_questionnaire_q2_message">More complex scans may take some time to process (if they need to be sent to a human for verification). Would you be okay if:</string>
    <string name="ocr_questionnaire_q2_option1">Some scans process in the background (taking at most 12 hours)</string>
    <string name="ocr_questionnaire_q2_option2">I\'d prefer to just enter them myself</string>
    <string name="ocr_questionnaire_email_us">Have more questions? Email us.</string>
    <string name="category_name">Name: </string>
    <string name="category_code">Code: </string>
    <string name="category_null">&lt;Category&gt;</string>
    <string name="category_null_code">NUL</string>
    <string name="category_airfare">Airfare</string>
    <string name="category_airfare_code">AIRP</string>
    <string name="category_breakfast">Breakfast</string>
    <string name="category_breakfast_code">BRFT</string>
    <string name="category_dinner">Dinner</string>
    <string name="category_dinner_code">DINN</string>
    <string name="category_entertainment">Entertainment</string>
    <string name="category_entertainment_code">ENT</string>
    <string name="category_gasoline">Gasoline</string>
    <string name="category_gasoline_code">GAS</string>
    <string name="category_gift">Gift</string>
    <string name="category_gift_code">GIFT</string>
    <string name="category_hotel">Hotel</string>
    <string name="category_hotel_code">HTL</string>
    <string name="category_laundry">Laundry</string>
    <string name="category_laundry_code">LAUN</string>
    <string name="category_lunch">Lunch</string>
    <string name="category_lunch_code">LNCH</string>
    <string name="category_other">Other</string>
    <string name="category_other_code">MISC</string>
    <string name="category_parking_tolls">Parking/Tolls</string>
    <string name="category_parking_tolls_code">PARK</string>
    <string name="category_postage_shipping">Postage/Shipping</string>
    <string name="category_postage_shipping_code">POST</string>
    <string name="category_car_rental">Car Rental</string>
    <string name="category_car_rental_code">RCAR</string>
    <string name="category_taxi_bus">Taxi/Bus</string>
    <string name="category_taxi_bus_code">TAXI</string>
    <string name="category_telephone_fax">Telephone/Fax</string>
    <string name="category_telephone_fax_code">TELE</string>
    <string name="category_tip">Tip</string>
    <string name="category_tip_code">TIP</string>
    <string name="category_train">Train</string>
    <string name="category_train_code">TRN</string>
    <string name="category_books_periodicals">Books/Periodicals</string>
    <string name="category_books_periodicals_code">ZBKP</string>
    <string name="category_cell_phone">Cell Phone</string>
    <string name="category_cell_phone_code">ZCEL</string>
    <string name="category_dues_subscriptions">Dues/Subscriptions</string>
    <string name="category_dues_subscriptions_code">ZDUE</string>
    <string name="category_meals_justified">Meals (Justified)</string>
    <string name="category_meals_justified_code">ZMEO</string>
    <string name="category_stationery_stations">Stationery/Stations</string>
    <string name="category_stationery_stations_code">ZSTS</string>
    <string name="category_training_fees">Training Fees</string>
    <string name="category_training_fees_code">ZTRN</string>
    <string name="menu_receiptimage_retake">Retake Photo</string>
    <string name="menu_receiptimage_rotate_ccw">Rotate CCW</string>
    <string name="menu_receiptimage_rotate_cw">Rotate CW</string>
    <string name="email_body_subject_5mb_warning">The following attachment is over 5MB in size and may not properly attach: %s</string>
    <string name="progress_import">Importing your files&#8230;</string>
    <string name="SD_ERROR">Error: Please make sure that your SD Card is available and not mounted to your computer.</string>
    <string name="SD_WARNING">Warning: Your SD Card is not available or is mounted to your computer. Some images may be inaccessible. Switching to internal storage&#8230;</string>
    <string name="database_error">Error: Failed to save your receipt</string>
    <string name="database_get_error">Error: Failed to fetch your data. Try re-launching the app.</string>
    <string name="DIALOG_EMAIL_CHECKBOX_PDF_FULL">Full PDF Report</string>
    <string name="DIALOG_EMAIL_CHECKBOX_PDF_IMAGES">PDF Report - No Table</string>
    <string name="DIALOG_EMAIL_CHECKBOX_CSV">CSV File</string>
    <string name="DIALOG_EMAIL_CHECKBOX_ZIP_IMAGES_STAMPED">ZIP - Stamped JPGs</string>
    <string name="manual_backup_title">Manual Backups:</string>
    <string name="manual_backup_description">Back up your data to keep your receipts safe! You can restore your data by importing the SmartReceipts.SMR backup file, which is generated via the "Backup" button below.</string>
    <string name="manual_backup_export">Backup</string>
    <string name="manual_backup_import">Import</string>
    <string name="auto_backup_title">Automatic Backups [BETA]:</string>
    <string name="auto_backup_wifi_only">Use Wi-Fi Only</string>
    <string name="auto_backup_warning_none">Warning: Automatic backups are not configured!\nYou may be at risk of losing your data.</string>
    <string name="auto_backup_configure">Tap to Configure</string>
    <string name="existing_backups_title">Existing Backups:</string>
</resources>