<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include layout="@layout/toolbar"
             android:id="@+id/toolbar"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_margin_size" >

        <TextView style="@style/Widget.SmartReceipts.TextView.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin_item_separator"
            android:text="@string/manual_backup_title" />

        <TextView style="@style/Widget.SmartReceipts.TextView.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin_item_separator"
            android:text="@string/manual_backup_description" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="@dimen/default_margin_size"
            android:layout_marginStart="@dimen/default_margin_size"
            android:layout_marginRight="@dimen/default_margin_size"
            android:layout_marginEnd="@dimen/default_margin_size" >
            <Button style="@style/Widget.SmartReceipts.Button"
                android:id="@+id/manual_backup_export"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/default_margin_size"
                android:layout_marginEnd="@dimen/default_margin_size"
                android:text="@string/manual_backup_export" />
            <Button style="@style/Widget.SmartReceipts.Button"
                android:id="@+id/manual_backup_import"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin_size"
                android:layout_marginStart="@dimen/default_margin_size"
                android:layout_toRightOf="@+id/manual_backup_export"
                android:layout_toEndOf="@+id/manual_backup_export"
                android:text="@string/manual_backup_import" />
        </RelativeLayout>

        <View style="@style/Widget.View.Divider.Horizontal"
            android:layout_marginTop="@dimen/default_margin_size"
            android:layout_marginBottom="@dimen/default_margin_size"/>

        <TextView style="@style/Widget.SmartReceipts.TextView.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin_item_separator"
            android:text="@string/auto_backup_title" />

        <TextView style="@style/Widget.SmartReceipts.TextView.Body1"
            android:id="@+id/auto_backup_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:drawableLeft="@android:drawable/stat_sys_warning"
            android:drawableStart="@android:drawable/stat_sys_warning"
            android:drawablePadding="@dimen/default_margin_item_separator"
            android:layout_marginBottom="@dimen/default_margin_item_separator"
            android:text="@string/auto_backup_warning" />

        <Button style="@style/Widget.SmartReceipts.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin_size"
            android:layout_gravity="center_horizontal"
            android:text="@string/auto_backup_configure"/>

        <View style="@style/Widget.View.Divider.Horizontal" />

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>