<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/default_margin_size">

    <TextView style="@style/Widget.SmartReceipts.TextView.Body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin_item_separator"
        android:text="@string/manual_backup_title" />

    <TextView style="@style/Widget.SmartReceipts.TextView.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin_item_separator"
        android:text="@string/manual_backup_description" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/default_margin_item_separator"
        android:layout_marginBottom="@dimen/default_margin_item_separator"
        android:layout_marginLeft="@dimen/default_margin_size"
        android:layout_marginStart="@dimen/default_margin_size"
        android:layout_marginRight="@dimen/default_margin_size"
        android:layout_marginEnd="@dimen/default_margin_size" >
        <LinearLayout style="@style/Widget.SmartReceipts.Button"
            android:id="@+id/manual_backup_export"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/default_margin_size"
            android:layout_marginEnd="@dimen/default_margin_size"
            android:paddingLeft="@dimen/default_margin_size"
            android:paddingStart="@dimen/default_margin_size"
            android:paddingRight="@dimen/default_margin_size"
            android:paddingEnd="@dimen/default_margin_size">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_cloud_upload_24dp"
                android:tint="@color/white" />
            <View
                android:layout_width="@dimen/default_margin_item_separator"
                android:layout_height="0dp" />
            <TextView style="@style/Widget.SmartReceipts.TextView.Button"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manual_backup_export"/>
        </LinearLayout>
        <LinearLayout style="@style/Widget.SmartReceipts.Button"
                android:id="@+id/manual_backup_import"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin_size"
                android:layout_marginStart="@dimen/default_margin_size"
                android:layout_toRightOf="@+id/manual_backup_export"
                android:layout_toEndOf="@+id/manual_backup_export"
                android:paddingLeft="@dimen/default_margin_size"
                android:paddingStart="@dimen/default_margin_size"
                android:paddingRight="@dimen/default_margin_size"
                android:paddingEnd="@dimen/default_margin_size">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_cloud_download_24dp"
                android:tint="@color/white" />
            <View
                android:layout_width="@dimen/default_margin_item_separator"
                android:layout_height="0dp" />
            <TextView style="@style/Widget.SmartReceipts.TextView.Button"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manual_backup_import"/>
        </LinearLayout>
    </RelativeLayout>

    <View style="@style/Widget.View.Divider.Horizontal"
        android:layout_marginTop="@dimen/default_margin_size"
        android:layout_marginBottom="@dimen/default_margin_size"/>

    <TextView style="@style/Widget.SmartReceipts.TextView.Body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin_item_separator"
        android:text="@string/auto_backup_title" />

    <TextView style="@style/Widget.SmartReceipts.TextView.Body1"
        android:id="@+id/auto_backup_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:drawableLeft="@android:drawable/stat_sys_warning"
        android:drawableStart="@android:drawable/stat_sys_warning"
        android:drawablePadding="@dimen/default_margin_item_separator"
        android:layout_marginBottom="@dimen/default_margin_item_separator"
        android:text="@string/auto_backup_warning_none" />

    <CheckBox
        android:id="@+id/auto_backup_wifi_only"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auto_backup_wifi_only"
        android:textAppearance="@style/Widget.SmartReceipts.TextView.Body1"
        android:paddingLeft="@dimen/default_margin_item_separator"
        android:paddingStart="@dimen/default_margin_item_separator"
        android:paddingRight="@dimen/default_margin_item_separator"
        android:paddingEnd="@dimen/default_margin_item_separator"
        android:layout_marginBottom="@dimen/default_margin_item_separator" />

    <LinearLayout style="@style/Widget.SmartReceipts.Button.Secondary"
        android:id="@+id/automatic_backup_config_button"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <ImageView
            android:id="@+id/automatic_backup_config_button_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_cloud_off_24dp"
            android:tint="?colorAccent" />
        <View
            android:layout_width="@dimen/default_margin_item_separator"
            android:layout_height="0dp" />
        <TextView style="@style/Widget.SmartReceipts.TextView.Button.Secondary"
            android:id="@+id/automatic_backup_config_button_text"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto_backup_configure" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/existing_backups_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <View style="@style/Widget.View.Divider.Horizontal"
              android:layout_marginBottom="@dimen/default_margin_size"/>

        <TextView style="@style/Widget.SmartReceipts.TextView.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin_item_separator"
            android:text="@string/existing_backups_title" />

    </LinearLayout>

</LinearLayout>